RetailDevGit/src/objects/ARM_Nielson_Product__c.object
<CustomObject>
    <description>Appirio Retail Management (ARM) Object</description>
    <fields>
        <fullName>Diageo_Brand__c</fullName>
        <label>Diageo Segment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>BEER</fullName>
                </value>
                <value>
                    <fullName>BRANDY/COGNAC</fullName>
                </value>
                <value>
                    <fullName>CIDER</fullName>
                </value>
                <value>
                    <fullName>COOLERS</fullName>
                </value>
                <value>
                    <fullName>CORDIALS</fullName>
                </value>
                <value>
                    <fullName>GIN</fullName>
                </value>
                <value>
                    <fullName>GRAIN ALCOHOL</fullName>
                </value>
                <value>
                    <fullName>MULTI COMBO PACKS</fullName>
                </value>
                <value>
                    <fullName>PAB</fullName>
                </value>
                <value>
                    <fullName>POUCH</fullName>
                </value>
                <value>
                    <fullName>PREPARED COCKTAILS</fullName>
                </value>
                <value>
                    <fullName>RUM</fullName>
                </value>
                <value>
                    <fullName>SHANDY</fullName>
                </value>
                <value>
                    <fullName>TEQUILA</fullName>
                </value>
                <value>
                    <fullName>VODKA</fullName>
                </value>
                <value>
                    <fullName>WHISKEY</fullName>
                </value>
                <value>
                    <fullName>NONE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Diageo_Category_Formula__c</fullName>
        <description>Converted nielsen category to diageo category</description>
        <formula>CASE( TEXT(Nielsen_Category__c)
,&apos;APERTIF&apos;,&apos;NOT DEFINED&apos;
,&apos;BOURBON&apos;,&apos;NA WHISKEY&apos;
,&apos;BOURBON-BLENDED&apos;,&apos;NA WHISKEY&apos;
,&apos;BOURBON-STRAIGHT/BONDED&apos;,&apos;NA WHISKEY&apos;
,&apos;BRANDY/COGNAC&apos;,&apos;BRANDY/COGNAC&apos;
,&apos;CANADIAN WHISKEY&apos;,&apos;NA WHISKEY&apos;
,&apos;COCKTAILS&apos;,&apos;COCKTAILS&apos;
,&apos;CORDIALS &amp; PROPRIETARY LIQUEUR&apos;,&apos;CORDIALS &amp; PROPRIETARY LIQUEUR&apos;
,&apos;FLAVORED REFRESHMENT&apos;,&apos;NOT DEFINED&apos;
,&apos;GIN&apos;,&apos;GIN&apos;
,&apos;IRISH WHISKEY&apos;,&apos;IRISH WHISKEY&apos;
,&apos;NOT DEFINED&apos;,&apos;NOT DEFINED&apos;
,&apos;REMAINING WHISKEY&apos;,&apos;NA WHISKEY&apos;
,&apos;REPORTED UNCLASSIFIABLE UPC\&apos;S&apos;,&apos;NOT DEFINED&apos;
,&apos;RUM&apos;,&apos;RUM&apos;
,&apos;SCOTCH&apos;,&apos;SCOTCH&apos;
,&apos;TEQUILA&apos;,&apos;TEQUILA&apos;
,&apos;VODKA&apos;,&apos;VODKA&apos;
,&apos;WHISKEY&apos;,&apos;WHISKEY&apos;
,&apos;Wine Based&apos;,&apos;NOT DEFINED&apos;
,&apos;DOMESTIC DRY TABLE&apos;,&apos;WINE&apos;
,&apos;FORTIFIED WINE&apos;,&apos;WINE&apos;
,&apos;IMPORTED DRY TABLE&apos;,&apos;WINE&apos;
,&apos;SPARKLING WINE&apos;,&apos;WINE&apos;
,&apos;STILL WINE&apos;,&apos;WINE&apos;
,&apos;SWEET DESSERT DOMESTIC&apos;,&apos;WINE&apos;
,&apos;WINE BASED&apos;,&apos;WINE&apos;
, TEXT(Nielsen_Category__c))</formula>
        <label>Diageo Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nielsen_Brand_Family__c</fullName>
        <label>Brand Family</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nielsen_Brand_Variant__c</fullName>
        <label>Brand Extension</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nielsen_Brand__c</fullName>
        <label>Brand Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nielsen_Category__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Diageo_Brand__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>ALE</fullName>
                </value>
                <value>
                    <fullName>APERTIF</fullName>
                </value>
                <value>
                    <fullName>BEER</fullName>
                </value>
                <value>
                    <fullName>BOURBON-BLENDED</fullName>
                </value>
                <value>
                    <fullName>BOURBON-STRAIGHT/BONDED</fullName>
                </value>
                <value>
                    <fullName>BRANDY/COGNAC</fullName>
                </value>
                <value>
                    <fullName>CANADIAN WHISKEY</fullName>
                </value>
                <value>
                    <fullName>COCKTAILS</fullName>
                </value>
                <value>
                    <fullName>COOLER</fullName>
                </value>
                <value>
                    <fullName>CORDIALS &amp; PROPRIETARY LIQUEUR</fullName>
                </value>
                <value>
                    <fullName>DOMESTIC DRY TABLE</fullName>
                </value>
                <value>
                    <fullName>FLAVORED REFRESHMENT</fullName>
                </value>
                <value>
                    <fullName>GIN</fullName>
                </value>
                <value>
                    <fullName>IMPORTED DRY TABLE</fullName>
                </value>
                <value>
                    <fullName>IRISH WHISKEY</fullName>
                </value>
                <value>
                    <fullName>KOSHER TABLE</fullName>
                </value>
                <value>
                    <fullName>LIGHT BEER &apos;LOW CAL/ALCOHOL&apos;</fullName>
                </value>
                <value>
                    <fullName>MALT LIQUOR</fullName>
                </value>
                <value>
                    <fullName>NEAR BEER/MALT BEVERAGE</fullName>
                </value>
                <value>
                    <fullName>REMAINING WHISKEY</fullName>
                </value>
                <value>
                    <fullName>REPORTED UNCLASSIFIABLE UPC&apos;S</fullName>
                </value>
                <value>
                    <fullName>RUM</fullName>
                </value>
                <value>
                    <fullName>SAKE</fullName>
                </value>
                <value>
                    <fullName>SANGRIA</fullName>
                </value>
                <value>
                    <fullName>SCOTCH</fullName>
                </value>
                <value>
                    <fullName>STOUT AND PORTER</fullName>
                </value>
                <value>
                    <fullName>SWEET DESSERT DOMESTIC</fullName>
                </value>
                <value>
                    <fullName>SWEET DESSERT IMPORTED</fullName>
                </value>
                <value>
                    <fullName>TEQUILA</fullName>
                </value>
                <value>
                    <fullName>VERMOUTH</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Nielsen_Size__c</fullName>
        <label>Base Size</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0.05L</fullName>
                </value>
                <value>
                    <fullName>0.07L</fullName>
                </value>
                <value>
                    <fullName>0.094L</fullName>
                </value>
                <value>
                    <fullName>0.1L</fullName>
                </value>
                <value>
                    <fullName>0.103L</fullName>
                </value>
                <value>
                    <fullName>0.118L</fullName>
                </value>
                <value>
                    <fullName>0.186L</fullName>
                </value>
                <value>
                    <fullName>0.187L</fullName>
                </value>
                <value>
                    <fullName>0.1875L</fullName>
                </value>
                <value>
                    <fullName>0.2L</fullName>
                </value>
                <value>
                    <fullName>0.275L</fullName>
                </value>
                <value>
                    <fullName>0.295L</fullName>
                </value>
                <value>
                    <fullName>0.3L</fullName>
                </value>
                <value>
                    <fullName>0.33L</fullName>
                </value>
                <value>
                    <fullName>0.355L</fullName>
                </value>
                <value>
                    <fullName>0.357L</fullName>
                </value>
                <value>
                    <fullName>0.375L</fullName>
                </value>
                <value>
                    <fullName>0.44L</fullName>
                </value>
                <value>
                    <fullName>0.473L</fullName>
                </value>
                <value>
                    <fullName>0.5L</fullName>
                </value>
                <value>
                    <fullName>0.569L</fullName>
                </value>
                <value>
                    <fullName>0.591L</fullName>
                </value>
                <value>
                    <fullName>0.65L</fullName>
                </value>
                <value>
                    <fullName>0.695L</fullName>
                </value>
                <value>
                    <fullName>0.7L</fullName>
                </value>
                <value>
                    <fullName>0.71L</fullName>
                </value>
                <value>
                    <fullName>0.75L</fullName>
                </value>
                <value>
                    <fullName>0.946L</fullName>
                </value>
                <value>
                    <fullName>0.98L</fullName>
                </value>
                <value>
                    <fullName>1.0L</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Nielsen_Supplier__c</fullName>
        <label>Business Entrps High</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nielsen_Unit__c</fullName>
        <label>Multi Pack</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UPC_CODE__c</fullName>
        <description>Universal Product Code</description>
        <externalId>true</externalId>
        <inlineHelpText>UPC Code from Nielsen.  This is the field that is used by the mobile app to identify products.  However, the UPC should be entered in the required UPC field as well for use in SFDC.</inlineHelpText>
        <label>UPC</label>
        <length>25</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>UPC_Code_11_Digit__c</fullName>
        <formula>RIGHT(UPC_CODE__c , 11)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>UPC Code 11 Digit</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_DESC__c</fullName>
        <label>UPC Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_Length__c</fullName>
        <formula>LEN(UPC_CODE__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>UPC Length</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Nielsen Product</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Nielsen_Products</fullName>
        <columns>NAME</columns>
        <columns>UPC_DESC__c</columns>
        <columns>Nielsen_Brand__c</columns>
        <columns>Nielsen_Brand_Family__c</columns>
        <columns>Nielsen_Size__c</columns>
        <columns>Nielsen_Category__c</columns>
        <columns>Diageo_Category_Formula__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Nielsen Products</label>
    </listViews>
    <listViews>
        <fullName>All_Nielsen_Productsnew</fullName>
        <columns>NAME</columns>
        <columns>UPC_DESC__c</columns>
        <columns>Nielsen_Brand__c</columns>
        <columns>Nielsen_Brand_Family__c</columns>
        <columns>Nielsen_Size__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>Diageo_Category_Formula__c</field>
            <operation>equals</operation>
            <value>SPIRITS</value>
        </filters>
        <label>All Nielsen Products new</label>
    </listViews>
    <nameField>
        <label>UPC</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Nielsen Products</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>